# real-time-cuda-q-qec-decoder

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  generate_docs.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  gh-pages.yml
architecture/: index.html
benchmarks/: cpu_baseline.json  reference_result.json
configs/: default.yaml
docs/: architecture.md  project_connection.md  timeline.md
docs/qml/: 1802.05779v2.pdf:Zone.Identifier  2211.03418v5.pdf:Zone.Identifier  2311.15444v1.pdf:Zone.Identifier  generative_quantum_ai.md  introduction.md  quantum_ai.md  timeline.md
docs/quantum_computing/: bloch_sphere.md  bra_ket.md  libraries.md  qec.md  quantum_mechanics.md  quantum_tunnelling.md  qubits.md
include/qec/: baseline_decoder.hpp  gpu_hooks.hpp  metrics.hpp  ring_buffer.hpp  surface_code.hpp  types.hpp
project_connection/: index.html
qml/: 2312.09939v2.pdf:Zone.Identifier  2512.02619v1.pdf:Zone.Identifier  2602.05047v1.pdf:Zone.Identifier
qml/generative_quantum_ai/: index.html
quantum_computing/bloch_sphere/: index.html
quantum_computing/bra_ket/: index.html
quantum_computing/libraries/: index.html
quantum_computing/qec/: index.html
quantum_computing/quantum_mechanics/: index.html
quantum_computing/quantum_tunnelling/: index.html
quantum_computing/qubits/: index.html
scripts/: compare_benchmark_drift.py  run_local_benchmark.sh
search/: search_index.json
src/cpp/: baseline_decoder.cpp  cuda_decoder.cu  gpu_hooks.cpp  main.cpp  metrics.cpp  surface_code.cpp
src/python/qec_decoder/: __init__.py  benchmark.py  export.py  geometry.py  model.py  simulator.py  train.py
tests/: cpp_smoke_test.cpp  test_geometry.py  test_simulator.py
timeline/: index.html
