[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-q-qec-decoder"
version = "0.1.0"
description = "Prototype real-time CUDA-Q surface-code QEC decoder with C++17 and PyTorch paths."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ansh Mittal" }]
dependencies = []

[project.optional-dependencies]
ml = ["torch>=2.2", "numpy>=1.26", "tqdm>=4.66"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
qec-generate = "qec_decoder.simulator:main"
qec-train = "qec_decoder.train:main"
qec-benchmark = "qec_decoder.benchmark:main"
qec-export = "qec_decoder.export:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]

[tool.ruff]
line-length = 100
target-version = "py310"

